# surveilr-extensions

./: .gitmodules  Cargo.toml  build.rs
.github/workflows/: extension-tests.yml
sqlite3/include/: sqlite3.h
src/: lib.rs
src/sqlean_extensions/: bindings.rs  mod.rs
src/sqlite_lines/: bindings.rs  mod.rs
src/sqlite_url/: escape.rs  extraction.rs  meta.rs  mod.rs  query_each.rs
tests/: crypto.sql  define.sql  fileio.sql  fuzzy.sql  ipaddr.sql  math.sql  regexp.sql  sqlean.sql  stats.sql  text.sql  time.sql  unicode.sql  uuid.sql  vsv.sql
