[package]
name = "surveilr_extensions"
version = "0.1.1"
edition = "2021"

[dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled"]}
rusqlite = { version = "0.32.1", features = ["functions", "vtab"]}
chrono = "0.4.38"
url = "2.4.1"
percent-encoding = "2.3.1"

[build-dependencies]
cc = "1.0"